# TDSM_Exercise

./: exercise_01_intro.ipynb  exercise_02_preprocessing.ipynb  exercise_03_representation.ipynb  exercise_04_representation_models.ipynb  pyproject.toml  requirements.txt
utils/: tdm_utils.py
